# Terraria

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
data/Config/TexturePath/: PlayerAnim.json
includes/: Camera.hpp  Chunk.hpp  Init.hpp  Timer.hpp  WorldGen.hpp  font.hpp  state.hpp
includes/GameObject/: Animation.hpp  Entity.hpp  GameObject.hpp  Input.hpp  LevelObj.hpp  Player.hpp
libs/: libSDL3_image.so.0  libSDL3_image.so.0.5.0  libSDL3_ttf.so.0  libSDL3_ttf.so.0.2.2
src/: Init.cpp  font.cpp  main.cpp
src/GameObject/: Animation.cpp  Entity.cpp  GameObject.cpp
